// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupBody renders with scrollbars 1`] = `
<div
  className="css-17w6qdz external-class"
>
  <div
    className="css-1wzifj2"
  >
    content
  </div>
</div>
`;

exports[`PopupBody renders without scrollbars 1`] = `
<div
  className="css-100xp3y external-class"
>
  content
</div>
`;
